--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </p>
                     <a href="#about" class="btn-story">My story <i class="fas fa-arrow-right"></i></a>
                     <div class="social-links">
-                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://www.linkedin.com/in/dilip-kumar-778310296/"><i class="fab fa-linkedin-in"></i></a>
                         <a href="#"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
@@ -122,5 +122,6 @@
         </div>
     </footer>
 </body>
+
 
 </html>
