--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <a href="#about" class="btn-story">My story <i class="fas fa-arrow-right"></i></a>
                     <div class="social-links">
                         <a href="https://www.linkedin.com/in/dilip-kumar-778310296/"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="#"><i class="fab fa-github"></i></a>
+                        <a href="https://github.com/PHY800"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </div>
@@ -125,3 +125,4 @@
 
 
 </html>
+
